# agentic-knowledge-graph-constructor

./: LICENSE  README.md  pyproject.toml
src/: knowledge_graph_workflow.py  message_handling.py  schema.py  server.py  signalling.py  streamlit_app.py  streamlit_callbacks.py  streamlit_utils.py  user_intent.py
src/agent/: knowledge_graph_workflow.py  schema.py
src/common/: __init__.py  message.py  message_handling.py  schema.py  structured.py  unstructured.py
src/service/: server.py
src/service/templates/: chat.html
src/templates/: chat.html  file_upload.html
src/workflow/: knowledge_graph_workflow.py  user_intent.py
src/workflow/structured/: csv_workflow.py  schema_critic_loop.py  schema_proposal_loop.py
