[project]
name = "rag-graph-constructor"
version = "0.1.0"
description = "A multi-agent system that automates the creation of a knowledge graph from provided structured and unstructured data files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.36.0",
    "langgraph>=0.6.7",
    "markitdown>=0.1.3",
    "neo4j>=5.28.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.8",
    "streamlit>=1.49.1",
]
