[project]
name = "rag-graph-constructor"
version = "0.1.0"
description = "A multi-agent system that automates the creation of a knowledge graph from provided structured and unstructured data files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.0.4",
    "fastapi>=0.116.1",
    "google-genai>=1.36.0",
    "markitdown>=0.1.3",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
]
