[project]
name = "rag-graph-constructor"
version = "0.1.0"
description = "A multi-agent system that automates the creation of a knowledge graph from provided structured and unstructured data files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.0.7",
    "fastapi>=0.117.1",
    "flask-session>=0.8.0",
    "flask[async]>=3.1.2",
    "google-genai>=1.38.0",
    "markitdown[all]>=0.1.3",
    "redis>=6.4.0",
]
